tests/ui/double_neg.stderr
error: `--x` could be misinterpreted as pre-decrement by C programmers, is usually a no-op
 --> $DIR/double_neg.rs:9:5
  |
9 |     --x; //~ERROR: `--x` could be misinterpreted as pre-decrement by C programmers, is usually a no-op
  |     ^^^
  |
note: lint level defined here
 --> $DIR/double_neg.rs:4:8
  |
4 | #[deny(double_neg)]
  |        ^^^^^^^^^^

error: aborting due to previous error

